[project]
name = "spotify-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "spotipy>=2.26.0",
    "sqlalchemy>=2.0.49",
]

[tool.uv.workspace]
members = [
    "fast",
]
